# coveragedemining

./: CMakeLists.txt  package.xml  readme_coveragedemining.txt
include/: CCDStar.h
launch/: startcoveragesim.launch
logger/: crtanjePutanje.m
src/: CCDStar.cpp  main.cpp
